# Takokit

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  TASKS.md  branch-validation.txt  design-qa.md  product-inventory.txt
apps/cli/: Cargo.toml
apps/cli/src/: args.rs  daemon.rs  daemon_client.rs  daemon_commands.rs  direct_inference.rs  display.rs  doctor.rs  entrypoint.rs  gui.rs  lib.rs  local_setup.rs  main.rs  output.rs  progress.rs  session_commands.rs  test_commands.rs  tests.rs  tui.rs  workspace.rs
apps/cli/src/daemon/: tests.rs
apps/cli/src/output/: human.rs
apps/cli/src/test_commands/: fast.rs  launch.rs
apps/cli/src/tui/: app.rs  catalog.rs  clone.rs  command.rs  editor.rs  input.rs  job.rs  mod.rs  ui.rs
apps/cli/src/tui/input/: forms.rs  mod.rs  navigation.rs
apps/cli/src/tui/ui/: forms.rs  home.rs  lists.rs  mod.rs  widgets.rs
apps/cli/tests/: managed_daemon_lifecycle.rs
crates/takokit-models/: Cargo.toml
crates/takokit-models/src/: adapters.rs  lib.rs  mock.rs  registry.rs
crates/takokit-models/src/runners/: mod.rs  onnx.rs  python_managed.rs  whispercpp.rs
crates/takokit-models/src/runners/onnx/: tests.rs
crates/takokit-models/src/runners/python_managed/: protocol.rs
crates/takokit-package/: Cargo.toml
crates/takokit-package/src/: artifact_io.rs  artifact_reuse.rs  catalog.rs  error.rs  install_support.rs  installed.rs  inventory.rs  lib.rs  model.rs  orchestrator.rs  planning.rs  progress.rs  records.rs  registry.rs  resolution.rs  runner.rs  runtime.rs  runtime_command.rs  runtime_model_source.rs  runtime_onnx.rs  runtime_python.rs  runtime_python_specs.rs  runtime_uv.rs  runtime_whisper.rs  tests.rs  transaction.rs
crates/takokit-package/src/runtime_python/: prefetch.rs
crates/takokit-package/src/runtime_python_specs/: catalog.rs
crates/takokit-package/src/tests/: artifact_install.rs  catalog.rs  catalog_invariants.rs  manifest.rs  package_records.rs  pull_reliability.rs  resolution.rs  runtime.rs
crates/takokit-server/: Cargo.toml
crates/takokit-server/.tako/: active-session  active-session.tmp-0d9c388c-c964-4430-a8c3-7955a9a5a646  active-session.tmp-7a91f666-f9b9-406a-8541-082c822a4b50
crates/takokit-server/.tako/sessions/02ea4e3f-0a28-4a6a-b033-4d6da4566ea1/: events.jsonl  session.json
crates/takokit-server/.tako/sessions/0c54c683-38d6-4ba6-acca-951e0c5b26f8/: session.json
crates/takokit-server/.tako/sessions/11c73f51-95da-449a-9a1d-8b599b71d4e6/: events.jsonl  session.json
crates/takokit-server/.tako/sessions/1b8fe66f-9885-4a41-b10d-20957f39a111/: events.jsonl  session.json
crates/takokit-server/.tako/sessions/1c44d09f-ef6f-402a-bc87-8aa4e5dad7c1/: events.jsonl  session.json
crates/takokit-server/.tako/sessions/1d4fcdc4-48fb-4e04-83de-e25ce942fbd5/: events.jsonl  session.json
crates/takokit-server/.tako/sessions/1d7d868c-b1e4-4cd3-bc5f-dc1fa1595332/: events.jsonl  session.json
crates/takokit-server/.tako/sessions/21e78a40-805b-451b-a45b-9a30f37c23f5/: events.jsonl  session.json
crates/takokit-server/.tako/sessions/21ffcca1-75a3-4407-b97a-6e20a81fbee8/: events.jsonl  session.json
crates/takokit-server/.tako/sessions/28cd7dfc-4c39-459c-ba2a-b9ec1d2f73b1/: events.jsonl  session.json
crates/takokit-server/.tako/sessions/2917a291-aeb6-470d-9e83-62cc60dd07b3/: session.json
crates/takokit-server/.tako/sessions/31ca1cb3-e231-4fbb-b48b-0efaf8d2c597/: events.jsonl  session.json
crates/takokit-server/.tako/sessions/3392f25d-5693-440c-91f3-618c596babb0/: session.json
crates/takokit-server/.tako/sessions/45e23d22-6aaf-41ef-a544-c3560269e742/: events.jsonl  session.json
crates/takokit-server/.tako/sessions/4aa94ca6-abda-4499-a915-03a28907c2ca/: events.jsonl  session.json
crates/takokit-server/.tako/sessions/5d66ecbb-afd2-4e28-bbba-2a3402462d5f/: events.jsonl  session.json
crates/takokit-server/.tako/sessions/609adb3f-6246-498e-9323-9f437ef5e3c4/: events.jsonl  session.json
crates/takokit-server/.tako/sessions/89a2f84a-c41a-4bd6-8b84-06c8cdfa3773/: events.jsonl  session.json
crates/takokit-server/.tako/sessions/8e256b13-2dc4-45f7-a931-8753c9df787a/: events.jsonl  session.json
crates/takokit-server/.tako/sessions/8f185517-2c8c-4c15-bb07-04cd7795add4/: events.jsonl  session.json
crates/takokit-server/.tako/sessions/8fd79981-3e78-4f47-a295-5cd52cb002fb/: events.jsonl  session.json
crates/takokit-server/.tako/sessions/9f8597dc-98bd-4012-988a-e0598a01192f/: events.jsonl  session.json
crates/takokit-server/.tako/sessions/acaf8f2c-1d2c-461c-bb4a-a6b334701b45/: events.jsonl  session.json
crates/takokit-server/.tako/sessions/b21de07a-7691-4192-be00-51daa5b8eec7/: events.jsonl  session.json
crates/takokit-server/.tako/sessions/b2467bb0-dcfb-483e-9fd2-596d4a0db2c0/: events.jsonl  session.json
crates/takokit-server/.tako/sessions/b5bacd8d-53c2-4eb8-b552-02813f31b418/: session.json
crates/takokit-server/.tako/sessions/b74035af-10d1-46fd-a67b-c1cd1f5fe597/: events.jsonl  session.json
crates/takokit-server/.tako/sessions/b9aa9914-b4ee-4952-8e78-3d039b86f6a1/: events.jsonl  session.json
crates/takokit-server/.tako/sessions/c1326fdd-0735-4cc6-b89d-240b78dd1fec/: events.jsonl  session.json
crates/takokit-server/.tako/sessions/c5d874e1-acd3-4a17-994d-da762fb2417c/: events.jsonl  session.json
crates/takokit-server/.tako/sessions/c9ec9490-bdd7-46f9-90bc-7e705deca3b1/: events.jsonl  session.json
crates/takokit-server/.tako/sessions/cac1e59c-032e-4790-94d8-f89f92b5fd27/: events.jsonl  session.json
crates/takokit-server/.tako/sessions/cf4fa640-de75-453d-8731-c69c14cee6fe/: session.json
crates/takokit-server/src/: handlers.rs  lib.rs  router.rs  state.rs  workspace.rs
crates/takokit-server/src/handlers/: error.rs  inference.rs  packages.rs  progress.rs  sessions.rs  system.rs
crates/takokit-server/src/router/: tests.rs
crates/takokit-store/: Cargo.toml
crates/takokit-store/src/: lib.rs  voice.rs  workspace.rs
(+253 files in other folders)
