[package]
name = "takokit-models"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
async-trait.workspace = true
takokit-audio = { path = "../takokit-audio" }
takokit-core = { path = "../takokit-core" }
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
