[package]
name = "takokit-models"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
takokit-audio = { path = "../takokit-audio" }
takokit-core = { path = "../takokit-core" }
takokit-package = { path = "../takokit-package" }
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
tokio.workspace = true
