[package]
name = "takokit-package"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
sha2.workspace = true
takokit-core = { path = "../takokit-core" }
thiserror.workspace = true
toml.workspace = true
ureq.workspace = true

[dev-dependencies]
tempfile = "3"
