[package]
name = "takokit-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
anyhow.workspace = true
axum.workspace = true
http.workspace = true
serde_json.workspace = true
takokit-core = { path = "../takokit-core" }
takokit-models = { path = "../takokit-models" }
takokit-package = { path = "../takokit-package" }
takokit-store = { path = "../takokit-store" }
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true
