[package]
name = "takokit-store"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
dirs.workspace = true
fs2.workspace = true
serde.workspace = true
serde_json.workspace = true
takokit-core = { path = "../takokit-core" }
uuid.workspace = true
